Implementation and evaluation of persistence

--- a/notebooks/01_preprocessing.ipynb
+++ b/notebooks/01_preprocessing.ipynb
@@ -48,7 +48,7 @@
     "import numpy as np\n",
     "import netCDF4\n",
     "import scipy \n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "path = '/Users/lacottepaul/Desktop/weather-nowcasting/data/radar_data.nc'\n",
     "ds = xr.open_dataset(path)\n",
@@ -338,6 +338,13 @@
    "source": [
     "np.save('/Users/lacottepaul/Desktop/weather-nowcasting/data/input_persistence.npy', Input)\n",
     "np.save('/Users/lacottepaul/Desktop/weather-nowcasting/data/target_persistence.npy', Target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III - Preprocessing for Unet "
    ]
   }
  ],
