--- a/notebooks/02_models.ipynb
+++ b/notebooks/02_models.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# In this notebook we will initialise the different models we will use for the project"
+    "# I - Creation of the models"
    ]
   },
   {
