--- a/notebooks/02_models.ipynb
+++ b/notebooks/02_models.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I - Creation of the models"
+    "# II - Creation of the models"
    ]
   },
   {
