--- a/notebooks/03_evaluation.ipynb
+++ b/notebooks/03_evaluation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook is dediacted to the evaluation and comparison of our persistence and more complex model "
+    "# III - Evaluation of our models "
    ]
   },
   {
