--- a/notebooks/01_preprocessing.ipynb
+++ b/notebooks/01_preprocessing.ipynb
@@ -344,7 +344,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III - Preprocessing for Unet "
+    "## I.3 - Preprocessing for Unet "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As required from the exercice we now need to modify the format of our inputs. We want to give t,t+1,t+2 hence we will concatenate Xs and give them to the model under the format (1,H,W,3). We will only have 47 inputs as we cannot predict t0,t1 and t2. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we look a bit into the state of the art for reflectivity nowcasting we can see a few articles talking about the relatively good performance Unet has on such task. I found my info at: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Yoon, S.-S., Shin, H., Heo, J.-Y., & Choi, K.-B. (2023).** Assessment of Deep Learning-Based Nowcasting Using Weather Radar in South Korea. *Remote Sensing, 15*(21), 5197. https://doi.org/10.3390/rs15215197"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Shreya Agrawal, Luke Barrington, Carla Bromberg, John Burge, Cenk Gazen, Jason Hickey.** Machine Learning for Precipitation Nowcasting from Radar Images. https://doi.org/10.48550/arXiv.1912.12132"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(47, 64, 64, 3) (47, 64, 64, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_unet_sequences(data, n_input=3, n_output=1):\n",
+    "    \"\"\"\n",
+    "    Prépare X et Y pour un modèle U-Net :\n",
+    "    - X : séquences concaténées en canaux (t, t+1, t+2)\n",
+    "    - Y : image suivante (t+3)\n",
+    "    \n",
+    "    data shape : (temps, H, W)\n",
+    "    \"\"\"\n",
+    "    X, Y = [], []\n",
+    "    for i in range(len(data) - n_input - n_output + 1):\n",
+    "        # empile les n_input images en canaux\n",
+    "        x_seq = np.stack([data[i + j] for j in range(n_input)], axis=-1)  # (H, W, n_input)\n",
+    "        y_seq = data[i + n_input]  # image à prédire (H, W)\n",
+    "        X.append(x_seq)\n",
+    "        Y.append(y_seq)\n",
+    "    return np.array(X), np.array(Y)[..., np.newaxis]  # ajoute canal pour Y\n",
+    "\n",
+    "# Exemple d’utilisation\n",
+    "X_unet, Y_unet = create_unet_sequences(data)\n",
+    "print(X_unet.shape, Y_unet.shape)"
    ]
   }
  ],
