--- a/notebooks/03_evaluation.ipynb
+++ b/notebooks/03_evaluation.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III - Evaluation of our models "
+    "# 3 - Evaluation for the different models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## I - Downloading the model "
+    "## I - Downloading of the model "
    ]
   },
   {
@@ -181,7 +181,7 @@
    "source": [
     "As we only have a few precipitations over the whole image, the persistence model is able to get quite 'good' acuracy by just predicting the same or nearly the same as t=i for t=i+1 and adjusting a little bit for t=i+2. \n",
     "\n",
-    "The goal is now to compare it to the performance of a more complex model. "
+    "The goal is now to compare to the performance of a more complex model. "
    ]
   }
  ],
