--- a/notebooks/01_preprocessing.ipynb
+++ b/notebooks/01_preprocessing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "Text(0.5, 1.0, 'Image at t+1')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -391,11 +391,9 @@
    "source": [
     "def create_unet_sequences(data, n_input=3, n_output=1):\n",
     "    \"\"\"\n",
-    "    Prépare X et Y pour un modèle U-Net :\n",
-    "    - X : séquences concaténées en canaux (t, t+1, t+2)\n",
-    "    - Y : image suivante (t+3)\n",
+    "    Prepare X and Y for the Unet model by concatenating three timesteps\n",
     "    \n",
-    "    data shape : (temps, H, W)\n",
+    "    data shape : (time, H, W,b) b being 3 for X's data and 1 for Y's. \n",
     "    \"\"\"\n",
     "    X, Y = [], []\n",
     "    for i in range(len(data) - n_input - n_output + 1):\n",
@@ -406,9 +404,11 @@
     "        Y.append(y_seq)\n",
     "    return np.array(X), np.array(Y)[..., np.newaxis]  # ajoute canal pour Y\n",
     "\n",
-    "# Exemple d’utilisation\n",
+    "\n",
     "X_unet, Y_unet = create_unet_sequences(data)\n",
-    "print(X_unet.shape, Y_unet.shape)"
+    "print(X_unet.shape, Y_unet.shape)\n",
+    "np.save('/Users/lacottepaul/Desktop/weather-nowcasting/data/X_unet.npy',X_unet)\n",
+    "np.save('/Users/lacottepaul/Desktop/weather-nowcasting/data/Y_unet.npy',Y_unet)"
    ]
   }
  ],
