--- a/notebooks/01_preprocessing.ipynb
+++ b/notebooks/01_preprocessing.ipynb
@@ -397,12 +397,12 @@
     "    \"\"\"\n",
     "    X, Y = [], []\n",
     "    for i in range(len(data) - n_input - n_output + 1):\n",
-    "        # empile les n_input images en canaux\n",
+    "        #stack channels\n",
     "        x_seq = np.stack([data[i + j] for j in range(n_input)], axis=-1)  # (H, W, n_input)\n",
-    "        y_seq = data[i + n_input]  # image à prédire (H, W)\n",
+    "        y_seq = data[i + n_input]  # truth to forecast (H, W)\n",
     "        X.append(x_seq)\n",
     "        Y.append(y_seq)\n",
-    "    return np.array(X), np.array(Y)[..., np.newaxis]  # ajoute canal pour Y\n",
+    "    return np.array(X), np.array(Y)[..., np.newaxis]  # Add a chanel for Y \n",
     "\n",
     "\n",
     "X_unet, Y_unet = create_unet_sequences(data)\n",
