--- a/notebooks/03_evaluation.ipynb
+++ b/notebooks/03_evaluation.ipynb
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears the model as learnt to make a uniform prediction to minimise the loss without approching a true reflectivity image. We may be able to change that using a different loss. "
+    "It appears the model has learn to make a uniform prediction to minimise the loss without approching a true reflectivity image. We may be able to change that using a different loss. "
    ]
   }
  ],
