--- a/notebooks/01_preprocessing.ipynb
+++ b/notebooks/01_preprocessing.ipynb
@@ -11,6 +11,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "All the imports needed here "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xarray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxarray\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxr\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnetCDF4\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'xarray'"
+     ]
+    }
+   ],
+   "source": [
+    "import xarray as xr\n",
+    "import numpy as np\n",
+    "import netCDF4\n",
+    "import scipy \n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## I.1 - Basic exploration of the Dataset "
    ]
   },
@@ -23,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +77,7 @@
     }
    ],
    "source": [
-    "import xarray as xr\n",
-    "import numpy as np\n",
-    "import netCDF4\n",
-    "import scipy \n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "path = '/Users/lacottepaul/Desktop/weather-nowcasting/data/radar_data.nc'\n",
     "ds = xr.open_dataset(path)\n",
@@ -377,14 +406,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(47, 64, 64, 3) (47, 64, 64, 1)\n"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     13\u001b[39m         Y.append(y_seq)\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.array(X), np.array(Y)[..., np.newaxis]  \u001b[38;5;66;03m# Add a chanel for Y \u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m X_unet, Y_unet = create_unet_sequences(\u001b[43mdata\u001b[49m)\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(X_unet.shape, Y_unet.shape)\n\u001b[32m     19\u001b[39m np.save(\u001b[33m'\u001b[39m\u001b[33m/Users/lacottepaul/Desktop/weather-nowcasting/data/X_unet.npy\u001b[39m\u001b[33m'\u001b[39m,X_unet)\n",
+      "\u001b[31mNameError\u001b[39m: name 'data' is not defined"
      ]
     }
    ],
@@ -410,11 +443,81 @@
     "np.save('/Users/lacottepaul/Desktop/weather-nowcasting/data/X_unet.npy',X_unet)\n",
     "np.save('/Users/lacottepaul/Desktop/weather-nowcasting/data/Y_unet.npy',Y_unet)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I.4 - Data augmentation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-27 13:46:24.426656: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-06-27 13:46:24.441276: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1751024784.449106  162589 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1751024784.451448  162589 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1751024784.458108  162589 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1751024784.458121  162589 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1751024784.458122  162589 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1751024784.458123  162589 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-06-27 13:46:24.460585: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_unet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     22\u001b[39m             Y_aug[i] = Y_batch[i]  \n\u001b[32m     24\u001b[39m         \u001b[38;5;28;01myield\u001b[39;00m X_aug, Y_aug\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m train_generator = data_generator(\u001b[43mX_unet\u001b[49m, Y_unet, batch_size=\u001b[32m5\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_unet' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "datagen = ImageDataGenerator(\n",
+    "    rotation_range=10,\n",
+    "    width_shift_range=0.05,\n",
+    "    height_shift_range=0.05,\n",
+    "    zoom_range=0.1\n",
+    ")\n",
+    "\n",
+    "def data_generator(X, Y, batch_size=8):\n",
+    "    while True:\n",
+    "        idx = np.random.randint(0, len(X), batch_size)\n",
+    "        X_batch = X[idx]\n",
+    "        Y_batch = Y[idx]\n",
+    "\n",
+    "        X_aug = np.zeros_like(X_batch)\n",
+    "        Y_aug = np.zeros_like(Y_batch)\n",
+    "\n",
+    "        for i in range(batch_size):\n",
+    "            augmented = datagen.random_transform(X_batch[i])\n",
+    "            X_aug[i] = augmented\n",
+    "            Y_aug[i] = Y_batch[i]  \n",
+    "\n",
+    "        yield X_aug, Y_aug\n",
+    "\n",
+    "train_generator = data_generator(X_unet, Y_unet, batch_size=5)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "r_env",
+   "display_name": "monenv",
    "language": "python",
    "name": "python3"
   },
